infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pitflow-payment
  namespace: pitflow
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pitflow-payment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pitflow-payment
        app.kubernetes.io/part-of: pitflow
        tags.datadoghq.com/env: "producao"
        tags.datadoghq.com/service: "pitflow-payment"
        tags.datadoghq.com/version: "${IMAGE_VERSION}"
      annotations:
        admission.datadoghq.com/java-lib.version: "latest"
    spec:
      containers:
        - name: pitflow-payment
          image: "${CONTAINER_IMAGE}"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /payment/actuator/health
              port: 8080
            failureThreshold: 18
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /payment/actuator/health
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /payment/actuator/health
              port: 8080
            periodSeconds: 15
