infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pitflow-payment
  namespace: pitflow
spec:
  selector:
    app.kubernetes.io/name: pitflow-payment
  ports:
    - name: http
      port: 80
      targetPort: 8080
